Bug 1768898, special case zip, json, and xml to allow these files to be saved with any extension, r=Gijs

Differential Revision: https://phabricator.services.mozilla.com/D146727